<resources>
    <string name="app_name">Real Estate Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_media">Media</string>
    <string name="title_description">Description</string>
    <string name="title_surface">Surface</string>
    <string name="title_number_of_rooms">Number of rooms</string>
    <string name="title_number_of_bathrooms">Number of bathrooms</string>
    <string name="title_number_of_bedrooms">Number of bedrooms</string>
    <string name="title_location">Location</string>
</resources>
